--- a/index.html
+++ b/index.html
@@ -69,21 +69,21 @@
           <img
             src="./images/what-are-we-doing-img-1.jpg"
             alt="monitor with nice interface for bussiness management"
-            width="360px"
+            width="360"
           />
         </li>
         <li>
           <img
             src="./images/what-are-we-doing-img-2.jpg"
             alt="multiple smartphone screens with user-friendly chat interface"
-            width="360px"
+            width="360"
           />
         </li>
         <li>
           <img
             src="./images/what-are-we-doing-img-3.jpg"
             alt="Demonstration of newsfeed app with a great adaptive design that looks equally good on both mobile and desktop devices"
-            width="360px"
+            width="360"
           />
         </li>
       </ul>
@@ -94,7 +94,7 @@
           <img
             src="./images/team-member-mark-guerrero.jpg"
             alt="photo of a white, handsome man in a blue shirt with a magnificent beard who looks businesslike"
-            width="260px"
+            width="260"
           />
           <h3>Mark Guerrero</h3>
           <p>Product Designer</p>
@@ -103,7 +103,7 @@
           <img
             src="./images/team-member-tom-ford.jpg"
             alt="photo of a white, young man in a blue shirt who does not look at the camera, but at the prospects for excellent cooperation"
-            width="260px"
+            width="260"
           />
           <h3>Tom Ford</h3>
           <p>Frontend Developer</p>
@@ -112,7 +112,7 @@
           <img
             src="./images/team-member-camila-garcia.jpg"
             alt="woman"
-            width="260px"
+            width="260"
           />
           <h3>Camila Garcia</h3>
           <p>Marketing</p>
@@ -121,7 +121,7 @@
           <img
             src="./images/team-member-daniel-wilson.jpg"
             alt="photo of a white, friendly man in a gray t-shirt who looks diligent, hardworking and charged for success"
-            width="260px"
+            width="260"
           />
           <h3>Daniel Wilson</h3>
           <p>UI Designer</p>
