--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -11,20 +10,20 @@
     <!-- Верхняя панель -->
     <header>
       <div>
-        <a href="/">WEBSTUDIO</a>
         <!-- Навигация по сайту -->
         <nav>
+          <a href="./index.html">WebStudio</a>
           <ul>
             <li>Studio</li>
             <li>Portfolio</li>
             <li>Contacts</li>
           </ul>
-          <!-- Контакты -->
-          <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com></a>
-            <a href="tel:+111111111">+11 (000) 111-11-11</a>
-          </address>
         </nav>
+        <!-- Контакты -->
+        <address>
+          <a href="mailto:info@devstudio.com">info@devstudio.com></a>
+          <a href="tel:+111111111">+11 (000) 111-11-11</a>
+        </address>
       </div>
     </header>
 
@@ -133,7 +132,7 @@
     <!-- Подвал страницы -->
     <footer>
       <p>
-        <a href="/">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
