--- a/index.html
+++ b/index.html
@@ -9,124 +9,130 @@
   <body>
     <!-- Верхняя панель -->
     <header>
-      <div>
-        <!-- Навигация по сайту -->
-        <nav>
-          <a href="./index.html">WebStudio</a>
-          <ul>
-            <li>Studio</li>
-            <li>Portfolio</li>
-            <li>Contacts</li>
-          </ul>
-        </nav>
-        <!-- Контакты -->
-        <address>
-          <a href="mailto:info@devstudio.com">info@devstudio.com></a>
-          <a href="tel:+111111111">+11 (000) 111-11-11</a>
-        </address>
-      </div>
+      <!-- Навигация по сайту -->
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <!-- Контакты -->
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com></a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      </address>
     </header>
 
     <!-- Основной контент страницы -->
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
+      <!-- Заголовок -->
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
       <!-- Список качеств комманды компании -->
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/what-are-we-doing-img-1.jpg"
-            alt="monitor with nice interface for bussiness management"
-            width="360"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/what-are-we-doing-img-2.jpg"
-            alt="multiple smartphone screens with user-friendly chat interface"
-            width="360"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/what-are-we-doing-img-3.jpg"
-            alt="Demonstration of newsfeed app with a great adaptive design that looks equally good on both mobile and desktop devices"
-            width="360"
-          />
-        </li>
-      </ul>
-
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/team-member-mark-guerrero.jpg"
-            alt="photo of a white, handsome man in a blue shirt with a magnificent beard who looks businesslike"
-            width="260"
-          />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img
-            src="./images/team-member-tom-ford.jpg"
-            alt="photo of a white, young man in a blue shirt who does not look at the camera, but at the prospects for excellent cooperation"
-            width="260"
-          />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img
-            src="./images/team-member-camila-garcia.jpg"
-            alt="woman"
-            width="260"
-          />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/team-member-daniel-wilson.jpg"
-            alt="photo of a white, friendly man in a gray t-shirt who looks diligent, hardworking and charged for success"
-            width="260"
-          />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
+      <section>
+        <h2 hidden>features</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/what-are-we-doing-img-1.jpg"
+              alt="monitor with nice interface for bussiness management"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/what-are-we-doing-img-2.jpg"
+              alt="multiple smartphone screens with user-friendly chat interface"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/what-are-we-doing-img-3.jpg"
+              alt="Demonstration of newsfeed app with a great adaptive design that looks equally good on both mobile and desktop devices"
+              width="360"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team-member-mark-guerrero.jpg"
+              alt="photo of a white, handsome man in a blue shirt with a magnificent beard who looks businesslike"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team-member-tom-ford.jpg"
+              alt="photo of a white, young man in a blue shirt who does not look at the camera, but at the prospects for excellent cooperation"
+              width="264"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team-member-camila-garcia.jpg"
+              alt="woman"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/team-member-daniel-wilson.jpg"
+              alt="photo of a white, friendly man in a gray t-shirt who looks diligent, hardworking and charged for success"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- Подвал страницы -->
