--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           </li>
         </ul>
       </section>
+      <!-- Работы комманды -->
       <section>
         <h2>What are we doing</h2>
         <ul>
@@ -94,6 +95,7 @@
           </li>
         </ul>
       </section>
+      <!-- Комманда студии -->
       <section>
         <h2>Our Team</h2>
         <ul>
